--- a/src/main/resources/templates/bet/extra_bets.html
+++ b/src/main/resources/templates/bet/extra_bets.html
@@ -12,68 +12,57 @@
 			<input type="hidden" th:field="*{extraBetId}" class="form-control" />
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
-					<div class="form-group">
-						<div class="panel panel-success">
-							<div class="panel-heading">
-								<label class="bold" th:text="#{extra_bets.finalWinner} + ':'"></label>
-								<span class="right" th:text="${extraBetCommand.pointsOne} + '/' + #{extra_bets.points(${@runtimeSettingsUtil.getSettings().getPointsFinalWinner()})}"></span>
-							</div>
-							<div class="panel-body">
-								<select th:field="*{finalWinner}" class="form-control">
-								  <option th:each="country : ${availableCountriesExtraBets}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
-								</select>
-							</div>
+					<div class="panel panel-success">
+						<div class="panel-heading">
+							<span class="bold" th:text="#{extra_bets.finalWinner} + ':'"></span>
+							<span class="right" th:text="${extraBetCommand.pointsOne} + '/' + #{extra_bets.points(${@runtimeSettingsUtil.getSettings().getPointsFinalWinner()})}"></span>
+						</div>
+						<div class="panel-body">
+							<select th:field="*{finalWinner}" class="form-control">
+							  <option th:each="country : ${availableCountriesExtraBets}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
+							</select>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="panel panel-warning">
+						<div class="panel-heading">
+							<span class="bold" th:text="#{extra_bets.semiFinalWinner} + ':'"></span>
+							<span class="right" th:text="${extraBetCommand.pointsTwo} + '/' + #{extra_bets.points(${@runtimeSettingsUtil.getSettings().getPointsSemiFinalWinner()})}"></span>
+						</div>
+						<div class="panel-body">
+							<select th:field="*{semiFinalWinner}" class="form-control">
+							  <option th:each="country : ${availableCountriesExtraBets}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
+							</select>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4">
+					<div class="panel panel-info">
+						<div class="panel-heading">
+							<span class="bold" th:text="#{extra_bets.thirdFinalWinner} + ':'"></span>
+							<span class="right" th:text="${extraBetCommand.pointsThree} + '/' + #{extra_bets.points(${@runtimeSettingsUtil.getSettings().getPointsThirdFinalWinner()})}"></span>
+						</div>
+						<div class="panel-body">
+							<select th:field="*{thirdFinalWinner}" class="form-control">
+							  <option th:each="country : ${availableCountriesExtraBets}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
+							</select>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
-					<div class="form-group">
-						<div class="panel panel-warning">
-							<div class="panel-heading">
-								<span class="bold" th:text="#{extra_bets.semiFinalWinner} + ':'"></span>
-								<span class="right" th:text="${extraBetCommand.pointsTwo} + '/' + #{extra_bets.points(${@runtimeSettingsUtil.getSettings().getPointsSemiFinalWinner()})}"></span>
-							</div>
-							<div class="panel-body">
-								<select th:field="*{semiFinalWinner}" class="form-control">
-								  <option th:each="country : ${availableCountriesExtraBets}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
-								</select>
-							</div>
-						</div>	
+					<div class="panel panel-default">
+						<div class="panel-heading">
+							<span class="bold" th:text="#{extra_bets.reachedPoints} + ':'"></span>
+							<span class="right label label-as-badge big-badge" th:classappend="${extraBetCommand.points != null} ? label-warning : label-default"
+								  th:text="${extraBetCommand.points != null ? extraBetCommand.points : '?'}"></span>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<div class="form-group">
-						<div class="panel panel-info">
-							<div class="panel-heading">
-								<span class="bold" th:text="#{extra_bets.thirdFinalWinner} + ':'"></span>
-								<span class="right" th:text="${extraBetCommand.pointsThree} + '/' + #{extra_bets.points(${@runtimeSettingsUtil.getSettings().getPointsThirdFinalWinner()})}"></span>
-							</div>
-							<div class="panel-body">
-								<select th:field="*{thirdFinalWinner}" class="form-control">
-								  <option th:each="country : ${availableCountriesExtraBets}" th:value="${country}" th:text="#{${'country.' + country.isoCode}}"></option>
-								</select>
-							</div>
-						</div>	
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4">
-					<div class="form-group">
-						<div class="panel panel-default">
-							<div class="panel-heading">
-								<span class="bold" th:text="#{extra_bets.reachedPoints} + ':'"></span>
-								<span class="right label label-as-badge big-badge" th:classappend="${extraBetCommand.points != null} ? label-warning : label-default" 
-					  					      th:text="${extraBetCommand.points != null ? extraBetCommand.points : '?'}"></span>
-							</div>
-						</div>													
-					</div>
-				</div>
-			</div>
+
 			<div class="row" th:if="${extraBetCommand.isBettable()}">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div class="form-group">
