bugfix gallery icons

--- a/src/main/resources/templates/image/gallery.html
+++ b/src/main/resources/templates/image/gallery.html
@@ -25,9 +25,9 @@
 					<div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
 					    <div class="slides"></div>
 					    <h3 class="title"></h3>
-					    <a class="prev">&#8249;</a>
-					    <a class="next">&#8250;</a>
-					    <a class="close">&#215;</a>
+					    <a class="prev"></a>
+					    <a class="next"></a>
+					    <a class="close"></a>
 					    <a class="play-pause"></a>
 					    <ol class="indicator"></ol>
 					</div>
