--- a/src/main/resources/templates/info/edit_info.html
+++ b/src/main/resources/templates/info/edit_info.html
@@ -27,7 +27,8 @@
 		<script>
 			$(document).ready(function() {
 				$('#summernote').summernote({
-					height: 300
+					height: 300,
+					focus: true
 				});
 			});
 		</script>
