update image sizing

--- a/src/main/resources/templates/info/misc.html
+++ b/src/main/resources/templates/info/misc.html
@@ -5,7 +5,7 @@
 		<title th:text="#{misc.title}"></title>
 	</head>
 	<body>
-		<div layout:fragment="content" class="imgsizing">
+		<div layout:fragment="content">
 			<h1 th:text="#{misc.title}"></h1>		
 			<div class="row">			
 				<div class="col-xs-12 col-sm-12 col-md-12">				
