--- a/src/main/resources/templates/info/edit_info.html
+++ b/src/main/resources/templates/info/edit_info.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorate="~{_layout}">
 	<head>
 		<title th:text="#{info.edit.title}"></title>
-		<link rel="stylesheet" th:href="@{/summernote-0.8.18/summernote.min.css}" />
+		<link rel="stylesheet" th:href="@{/summernote-0.8.18/summernote-lite.min.css}" />
 	</head>
 	<body>
 		<div layout:fragment="content" class="container">
@@ -23,7 +23,7 @@
 		</div>
 	</body>
 	<th:block layout:fragment="scripts">
-		<script type="text/javascript" th:src="@{/summernote-0.8.18/summernote.min.js}"></script>
+		<script type="text/javascript" th:src="@{/summernote-0.8.18/summernote-lite.min.js}"></script>
 		<script>
 			$(document).ready(function() {
 				$('#summernote').summernote({
