--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -8,20 +8,9 @@
 	<div layout:fragment="content" class="container">
 		<div th:replace="~{fragments/alert :: alert_headline}"></div>
 		<form id="userForm" th:action="@{/user/edit}" th:object="${editUserCommand}" action="#" method="post" role="form">
-			<div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h4 class="modal-title" id="myModalLabel" th:text="#{confirmation.msg}"></h4>
-						</div>
-						<div class="modal-footer">
-							<button type="button" class="btn btn-default" data-dismiss="modal" th:text="#{button.cancel}">Cancel</button>
-							<a th:href="@{'/user/' + ${editUserCommand.userId} + '/delete'}" class="btn btn-danger btn-ok" th:text="#{button.delete}">Delete</a>
-						</div>
-					</div>
-				</div>
-			</div>
+
+			<div th:replace="~{fragments/delete_confirm :: delete_confirm_modal('/user/' + ${editUserCommand.userId} + '/delete')}"></div>
+
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<input type="hidden" th:field="*{userId}" class="form-control" />
@@ -53,7 +42,7 @@
 					</div>
 					<div class="form-group">
 						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
-						<button type="button" sec:authorize="hasAuthority('PERM_DELETE_USER')" class="btn btn-danger btn-ok" href="@{'/user/' + ${editUserCommand.userId} + '/delete'}"
+						<button type="button" sec:authorize="hasAuthority('PERM_DELETE_USER')" class="btn btn-danger"
 								data-toggle="modal" data-target="#confirm-delete" th:text="#{button.delete}"></button>
 						<a href="#" th:href="@{/user}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>
 					</div>
