--- a/src/main/resources/templates/fragments/delete_confirm.html
+++ b/src/main/resources/templates/fragments/delete_confirm.html
@@ -11,7 +11,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal" th:text="#{button.cancel}">Cancel</button>
-						<a th:href="${href}" class="btn btn-danger" th:text="#{button.delete}">Delete</a>
+						<a th:href="@{${href}}" class="btn btn-danger" th:text="#{button.delete}">Delete</a>
 					</div>
 				</div>
 			</div>
