--- a/src/main/resources/templates/fragments/delete_confirm.html
+++ b/src/main/resources/templates/fragments/delete_confirm.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-	<div th:fragment="delete_confirm_modal(href)">
-		<div class="modal fade" id="confirm-delete" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	<div th:fragment="delete_confirm_modal(href, id)">
+		<div class="modal fade" th:id="${id}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
