using smaller modal dialog

--- a/src/main/resources/templates/fragments/delete_confirm.html
+++ b/src/main/resources/templates/fragments/delete_confirm.html
@@ -3,7 +3,7 @@
 <body>
 	<div th:fragment="delete_confirm_modal(href, id)">
 		<div class="modal fade" th:id="${id}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-			<div class="modal-dialog">
+			<div class="modal-dialog modal-sm">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
