--- a/src/main/resources/templates/bet/others.html
+++ b/src/main/resources/templates/bet/others.html
@@ -15,7 +15,7 @@
                     <span class="label label-success label-as-badge" th:text="${groupAvg.avgGoalsTeamTwo}">1</span>
                 </p>
                 <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-12">
+                    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 <img class="flag" th:if="${allBetsCommand.getIconPathTeamOne() != null}" th:src="@{${allBetsCommand.getIconPathTeamOne()}}"/>
