--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,50 +1,63 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorate="~{_layout}">
-	<head>
-		<title th:text="#{login.title}"></title>
-		<link rel="stylesheet" th:href="@{/css/bootstrap-toggle.min.css}" />
-	</head>
-	<body>
-		<div layout:fragment="content" class="container">
-			<h1 th:text="#{login.title.short}"></h1>
-			<div th:if="${param.error}" class="alert alert-danger" role="alert" th:with="errorMsg=${session['SPRING_SECURITY_LAST_EXCEPTION'].message}">
-				<span th:text="${errorMsg}"></span>
-			</div>
-			<form th:action="@{/login}" method="post">
-				<div class="row">
-					<div class="col-xs-12 col-sm-6 col-md-4">
-						<div class="form-group">
-							<input id="username" type="text" name="username" th:placeholder="#{login.placeholder.username}" class="form-control" />
-						</div>
-						<div class="form-group">
-							<input id="password" type="password" name="password" th:placeholder="#{login.placeholder.password}" class="form-control" />
-						</div>
-						<div class="form-group">
-							<input id="remember-me" data-toggle="toggle" data-size="small" data-onstyle="success" type="checkbox" name="remember-me" /> 
-							<label for="remember-me">Auto-Login</label>
-							<span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip" data-placement="top"
-								th:title="#{login.autologin.tooltip}"></span>
-						</div>
-						<div class="form-group">
-							<button id="loginSubmitBtn" type="submit" class="btn btn-primary" th:text="#{login.button.login}"></button>
-						</div>
-					</div>
-				</div>
-				<div th:if="${@runtimeSettingsUtil.getSettings().isSelfRegistrationEnabled()}">
-					<div class="col-xs-12 col-sm-12 col-md-12">
-						<div class="row">
-							<span class="text-muted" th:text="#{registration.text}"></span>
-						</div>
-						<div class="row">
-							<a href="#" th:href="@{/registration}" th:text="#{registration.link.text}"></a>
-						</div>
-					</div>
-				</div>
-			</form>
-		</div>		
-	</body>
-	<th:block layout:fragment="scripts">
-		<script type="text/javascript" th:src="@{/js/bootstrap-toggle.min.js}"></script>
-		<script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
-	</th:block>
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
+      layout:decorate="~{_layout}">
+<head>
+    <title th:text="#{login.title}"></title>
+    <link rel="stylesheet" th:href="@{/css/bootstrap-toggle.min.css}"/>
+    <link rel="stylesheet" th:href="@{/css/login.css}"/>
+</head>
+<body>
+<div layout:fragment="content" class="container">
+    <div id="login">
+        <h3 class="text-center text-white pt-5">Login form</h3>
+        <div class="container">
+            <div id="login-row" class="row justify-content-center align-items-center">
+                <div id="login-column" class="col-md-6">
+                    <div id="login-box" class="col-md-12">
+                        <div class="row">
+                            <div th:if="${param.error}" class="alert alert-danger" role="alert"
+                                 th:with="errorMsg=${session['SPRING_SECURITY_LAST_EXCEPTION'].message}">
+                                <span th:text="${errorMsg}"></span>
+                            </div>
+                        </div>
+                        <form id="login-form" class="form" th:action="@{/login}" method="post">
+                            <h1 class="text-center text-info" th:text="#{login.title.short}">Login</h1>
+                            <div class="form-group">
+                                <label for="username" class="text-info" th:text="#{login.placeholder.username}">Username:</label><br>
+                                <input type="text" name="username" id="username" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="password" class="text-info" th:text="#{login.placeholder.password}">Password:</label><br>
+                                <input type="text" name="password" id="password" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <input id="remember-me" data-toggle="toggle" data-size="small" data-onstyle="success"
+                                       type="checkbox" name="remember-me"/>
+                                <label for="remember-me">Auto-Login</label>
+                                <span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip"
+                                      data-placement="top"
+                                      th:title="#{login.autologin.tooltip}"></span>
+                            </div>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <input type="submit" name="submit" class="btn btn-info btn-md"
+                                           th:value="#{login.button.login}" value="submit">
+                                </div>
+                                <div class="col-sm-6">
+                                    <a th:if="${@runtimeSettingsUtil.getSettings().isSelfRegistrationEnabled()}"
+                                       href="#" th:href="@{/registration}" th:text="#{registration.link.text}"></a>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
+<th:block layout:fragment="scripts">
+    <script type="text/javascript" th:src="@{/js/bootstrap-toggle.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/pages/tooltip.js}" charset="UTF-8"></script>
+</th:block>
 </html>
