--- a/src/main/resources/templates/registration/registration.html
+++ b/src/main/resources/templates/registration/registration.html
@@ -2,15 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorate="~{_layout}">
 <head>
 	<title th:text="#{registration.title}"></title>
+	<link rel="stylesheet" th:href="@{/css/pages/registration.css}" />
 </head>
 <body>
 	<div layout:fragment="content" class="container">
 		<div th:replace="~{fragments/alert :: alert_headline}"></div>
-		
+
+		<h2 th:text="#{registration.text}"></h2>
 		<form id="registrationForm" th:action="@{/registration}" th:object="${registrationCommand}" action="#" method="post" role="form">
 			<div class="alert alert-danger" th:if="${#fields.hasErrors('global')}" th:errors="*{global}"></div>			
 			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4">
+				<div class="col-xs-12 col-sm-6 col-md-4 registrationBox">
 					<div class="form-group">
 						<label for="token" th:text="#{registration.token} + ':'"></label>
 						<input id="token" type="text" th:field="*{token}" class="form-control" style="width: 50%; background-color: lightskyblue;"/>
