--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -19,3 +19,7 @@ body {
 #login .container #login-row #login-column #login-box #login-form #register-link {
     margin-top: -85px;
 }
+
+.logo {
+    padding-top: 2rem;
+}
