--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="password" class="text-info" th:text="#{login.placeholder.password}">Password:</label><br>
-                                <input type="text" name="password" id="password" class="form-control">
+                                <input type="password" name="password" id="password" class="form-control">
                             </div>
                             <div class="form-group">
                                 <input id="remember-me" data-toggle="toggle" data-size="small" data-onstyle="success"
