--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -20,7 +20,7 @@
 	<body>
 		<nav th:replace="~{_navigation :: menu}"></nav>
 		<div class="container" role="main">
-			<div layout:fragment="content" class="container" role="main">Content Placeholder</div>
+			<div layout:fragment="content" th:remove="tag">Content Placeholder</div>
 		</div>
 		<script type="text/javascript" th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
 		<script type="text/javascript" th:src="@{/js/popper-1.11.0.min.js}"></script>
