--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -7,51 +7,47 @@
     <link rel="stylesheet" th:href="@{/css/login.css}"/>
 </head>
 <body>
-<div layout:fragment="content" class="container">
+<div layout:fragment="content">
     <div id="login">
-        <div class="container">
-            <div id="login-row" class="row justify-content-center align-items-center">
-                <div id="login-column" class="col-md-6">
-                    <div id="login-box" class="col-md-12">
-                        <div class="logo text-center">
-                            <img th:src="@{/images/thumbs_up.jpg}" class="img-circle" width="90"/>
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div th:if="${param.error}" class="alert alert-danger" role="alert"
+                     th:with="errorMsg=${session['SPRING_SECURITY_LAST_EXCEPTION'].message}">
+                    <span th:text="${errorMsg}"></span>
+                </div>
+                <div class="modal-header">
+                    <h1 class="text-center" th:text="#{login.title.short}">Welcome</h1>
+                </div>
+                <div class="modal-body">
+                    <form id="login-form" class="form" th:action="@{/login}" method="post">
+                        <div class="form-group">
+                            <input type="text" class="form-control input-lg" name="username"
+                                   th:placeholder="#{login.placeholder.username}"/>
                         </div>
-                        <div class="row">
-                            <div th:if="${param.error}" class="alert alert-danger" role="alert"
-                                 th:with="errorMsg=${session['SPRING_SECURITY_LAST_EXCEPTION'].message}">
-                                <span th:text="${errorMsg}"></span>
-                            </div>
+
+                        <div class="form-group">
+                            <input type="password" class="form-control input-lg" name="password"
+                                   th:placeholder="#{login.placeholder.password}"/>
                         </div>
-                        <form id="login-form" class="form" th:action="@{/login}" method="post">
-                            <h1 class="text-center text-info" th:text="#{login.title.short}">Login</h1>
-                            <div class="form-group">
-                                <label for="username" class="text-info" th:text="#{login.placeholder.username}">Username:</label><br>
-                                <input type="text" name="username" id="username" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <label for="password" class="text-info" th:text="#{login.placeholder.password}">Password:</label><br>
-                                <input type="password" name="password" id="password" class="form-control">
-                            </div>
-                            <div class="form-group">
-                                <input id="remember-me" data-toggle="toggle" data-size="small" data-onstyle="success"
-                                       type="checkbox" name="remember-me"/>
-                                <label for="remember-me">Auto-Login</label>
-                                <span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip"
-                                      data-placement="top"
-                                      th:title="#{login.autologin.tooltip}"></span>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-6">
-                                    <input type="submit" name="submit" class="btn btn-info btn-md"
-                                           th:value="#{login.button.login}" value="submit">
-                                </div>
-                                <div class="col-sm-6">
-                                    <a th:if="${@runtimeSettingsUtil.getSettings().isSelfRegistrationEnabled()}"
-                                       href="#" th:href="@{/registration}" th:text="#{registration.link.text}"></a>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
+
+                        <div class="form-group">
+                            <input type="submit" class="btn btn-block btn-lg btn-primary"
+                                   th:value="#{login.button.login}" value="Login"/>
+                        </div>
+                        <div th:if="${@runtimeSettingsUtil.getSettings().isSelfRegistrationEnabled()}"
+                             class="form-group">
+                            <span class="pull-right">
+                                <a href="#" th:href="@{/registration}" th:text="#{registration.link.text}"></a>
+                            </span>
+                        </div>
+                        <div class="form-group">
+                            <input id="remember-me" data-toggle="toggle" data-size="small" data-onstyle="success"
+                                   type="checkbox" name="remember-me"/>
+                            <label for="remember-me">Auto-Login</label>
+                            <span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip"
+                                  data-placement="top" th:title="#{login.autologin.tooltip}"></span>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
