--- a/src/main/resources/templates/registration/registration.html
+++ b/src/main/resources/templates/registration/registration.html
@@ -5,41 +5,41 @@
 	<link rel="stylesheet" th:href="@{/css/pages/registration.css}" />
 </head>
 <body>
-	<div layout:fragment="content" class="container">
-		<div th:replace="~{fragments/alert :: alert_headline}"></div>
+<div layout:fragment="content" class="container">
+	<div th:replace="~{fragments/alert :: alert_headline}"></div>
 
-		<h2 th:text="#{registration.text}"></h2>
-		<form id="registrationForm" th:action="@{/registration}" th:object="${registrationCommand}" action="#" method="post" role="form">
-			<div class="alert alert-danger" th:if="${#fields.hasErrors('global')}" th:errors="*{global}"></div>			
-			<div class="row">
-				<div class="col-xs-12 col-sm-6 col-md-4 registrationBox">
-					<div class="form-group">
-						<label for="token" th:text="#{registration.token} + ':'"></label>
-						<input id="token" type="text" th:field="*{token}" class="form-control token-input" />
-						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('token')}" th:errors="*{token}">token error</p>
-					</div>
-					<div class="form-group">
-						<label for="username" th:text="#{registration.username} + ':'"></label>
-						<input id="username" type="text" th:field="*{username}" class="form-control" />
-						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">username error</p>
-					</div>
-					<div class="form-group">
-						<label for="password" th:text="#{registration.password} + ':'"></label>
-						<input id="password" type="password" th:field="*{password}" class="form-control" />
-						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">passwordRepeat error</p>
-					</div>
-					<div class="form-group">
-						<label for="passwordRepeat" th:text="#{registration.passwordRepeat} + ':'"></label>
-						<input id="passwordRepeat" type="password" th:field="*{passwordRepeat}" class="form-control" />
-						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('passwordRepeat')}" th:errors="*{passwordRepeat}">passwordRepeat error</p>
-					</div>
-					<div class="form-group">
-						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
-						<a href="#" th:href="@{/}" class="btn btn-default" role="button" th:text="#{back.to.login}"></a>
-					</div>
+	<h2 th:text="#{registration.text}"></h2>
+	<form id="registrationForm" th:action="@{/registration}" th:object="${registrationCommand}" action="#" method="post" role="form">
+		<div class="alert alert-danger" th:if="${#fields.hasErrors('global')}" th:errors="*{global}"></div>
+		<div class="row">
+			<div class="col-xs-12 col-sm-6 col-md-4">
+				<div class="form-group">
+					<label for="token" th:text="#{registration.token} + ':'"></label>
+					<input id="token" type="text" th:field="*{token}" class="form-control token-input" />
+					<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('token')}" th:errors="*{token}">token error</p>
+				</div>
+				<div class="form-group">
+					<label for="username" th:text="#{registration.username} + ':'"></label>
+					<input id="username" type="text" th:field="*{username}" class="form-control" />
+					<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">username error</p>
+				</div>
+				<div class="form-group">
+					<label for="password" th:text="#{registration.password} + ':'"></label>
+					<input id="password" type="password" th:field="*{password}" class="form-control" />
+					<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">passwordRepeat error</p>
+				</div>
+				<div class="form-group">
+					<label for="passwordRepeat" th:text="#{registration.passwordRepeat} + ':'"></label>
+					<input id="passwordRepeat" type="password" th:field="*{passwordRepeat}" class="form-control" />
+					<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('passwordRepeat')}" th:errors="*{passwordRepeat}">passwordRepeat error</p>
+				</div>
+				<div class="form-group">
+					<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
+					<a href="#" th:href="@{/}" class="btn btn-default" role="button" th:text="#{back.to.login}"></a>
 				</div>
 			</div>
-		</form>
-	</div>
+		</div>
+	</form>
+</div>
 </body>
 </html>
