update login and registration form

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,6 +15,9 @@
                      th:with="errorMsg=${session['SPRING_SECURITY_LAST_EXCEPTION'].message}">
                     <span th:text="${errorMsg}"></span>
                 </div>
+                <div class="logo text-center">
+                    <img th:src="@{/images/thumbs_up.jpg}" width="90"/>
+                </div>
                 <div class="modal-header">
                     <h1 class="text-center" th:text="#{login.title.short}">Welcome</h1>
                 </div>
