--- a/src/main/resources/templates/bet/extra_others.html
+++ b/src/main/resources/templates/bet/extra_others.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security" layout:decorate="~{_layout}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" layout:decorate="~{_layout}">
 	<head>
 		<title th:text="#{bet.extra.others.title}"></title>
 	</head>
@@ -9,29 +8,32 @@
 			<h1 th:text="#{bet.extra.others.title}"></h1>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4" th:each="extraBet : ${allExtraBets}">
-					<div class="panel panel-default panel-extra-bets-others">					
+					<div class="panel panel-default">
 						<div class="panel-heading">
 							<span th:replace="~{fragments/profile_image :: profile_image_small_with_popup(${@webSecurityUtil.getUserProfileImageKeyFor(extraBet.userName)})}"></span>
-							<span th:text="${extraBet.userName}"></span>	
-					   </div>
+							<span th:text="${extraBet.userName}"></span>
+							<span class="label label-warning label-as-badge big-badge right" th:text="${extraBet.points}"></span>
+						</div>
 					   <div class="panel-body">
 						   <div class="table-responsive">
 						   		<table class="table table-condensed">
 						   			<tr>
-						   				<th th:title="#{extra_bets.finalWinner}">1. <span class="fas fa-trophy"></span></th>
-						   				<td class="success" th:text="#{${'country.' + extraBet.finalWinner.getIsoCode()}}"></td>
-						   			</tr>
-						   			<tr>	
-						   				<th th:title="#{extra_bets.semiFinalWinner}">2. <span class="fas fa-trophy"></span></th>
-						   				<td class="warning" th:text="#{${'country.' + extraBet.semiFinalWinner.getIsoCode()}}"></td>
-						   			</tr>
-						   			<tr>	
-						   				<th th:title="#{extra_bets.thirdFinalWinner}">3. <span class="fas fa-trophy"></span></th>
-						   				<td class="info" th:text="#{${'country.' + extraBet.thirdFinalWinner.getIsoCode()}}"></td>
+										<td class="success">
+											1. <i class="fas fa-trophy"></i>&nbsp;&nbsp;
+											<span th:text="#{${'country.' + extraBet.finalWinner.getIsoCode()}}"></span>
+										</td>
 						   			</tr>
 						   			<tr>
-						   				<th th:text="#{bet.list.points}"></th>
-						   				<td th:text="${extraBet.points}"></td>
+										<td class="warning">
+											2. <i class="fas fa-trophy"></i>&nbsp;&nbsp;
+											<span th:text="#{${'country.' + extraBet.semiFinalWinner.getIsoCode()}}"></span>
+										</td>
+						   			</tr>
+						   			<tr>
+										<td class="info">
+											3. <i class="fas fa-trophy"></i>&nbsp;&nbsp;
+											<span th:text="#{${'country.' + extraBet.thirdFinalWinner.getIsoCode()}}"></span>
+										</td>
 						   			</tr>
 						   		</table>
 					   	   </div>
