--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -34,8 +34,9 @@
                         </div>
 
                         <div class="form-group">
-                            <input type="submit" class="btn btn-block btn-lg btn-primary"
-                                   th:value="#{login.button.login}" value="Login"/>
+                            <button type="submit" class="btn btn-block btn-lg btn-primary" th:value="#{login.button.login}">
+                                <span th:text="#{login.button.login}"></span>&nbsp;<i class="fas fa-sign-in-alt"></i>
+                            </button>
                         </div>
                         <div th:if="${@runtimeSettingsUtil.getSettings().isSelfRegistrationEnabled()}"
                              class="form-group">
