--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -38,18 +38,19 @@
                                 <span th:text="#{login.button.login}"></span>&nbsp;<i class="fas fa-sign-in-alt"></i>
                             </button>
                         </div>
-                        <div th:if="${@runtimeSettingsUtil.getSettings().isSelfRegistrationEnabled()}"
-                             class="form-group">
-                            <span class="pull-right">
-                                <a href="#" th:href="@{/registration}" th:text="#{registration.link.text}"></a>
-                            </span>
-                        </div>
                         <div class="form-group">
-                            <input id="remember-me" data-toggle="toggle" data-size="small" data-onstyle="success"
-                                   type="checkbox" name="remember-me"/>
-                            <label for="remember-me">Auto-Login</label>
-                            <span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip"
-                                  data-placement="top" th:title="#{login.autologin.tooltip}"></span>
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <input id="remember-me" data-toggle="toggle" data-size="small" data-onstyle="success"
+                                           type="checkbox" name="remember-me"/>
+                                    <label for="remember-me">Auto-Login</label>
+                                    <span class="fas fa-info-circle" aria-hidden="true" data-toggle="tooltip"
+                                          data-placement="top" th:title="#{login.autologin.tooltip}"></span>
+                                </div>
+                                <div th:if="${@runtimeSettingsUtil.getSettings().isSelfRegistrationEnabled()}" class="col-sm-6 text-right registration">
+                                    <a href="#" th:href="@{/registration}" th:text="#{registration.link.text}"></a>
+                                </div>
+                            </div>
                         </div>
                     </form>
                 </div>
