update login layout

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
                     <span th:text="${errorMsg}"></span>
                 </div>
                 <div class="logo text-center">
-                    <img th:src="@{/images/thumbs_up.jpg}" width="90"/>
+                    <i class="fas fa-thumbs-up fa-8x"></i>
                 </div>
                 <div class="modal-header">
                     <h1 class="text-center" th:text="'FredBet - ' + #{login.title.short}">Welcome</h1>
