bugfix show extra bets others

--- a/src/main/resources/templates/bet/extra_others.html
+++ b/src/main/resources/templates/bet/extra_others.html
@@ -29,7 +29,7 @@
 											<span th:text="#{${'country.' + extraBet.semiFinalWinner.getIsoCode()}}"></span>
 										</td>
 						   			</tr>
-						   			<tr>
+						   			<tr th:if="${extraBet.thirdFinalWinner}">
 										<td class="info">
 											3. <i class="fas fa-trophy"></i>&nbsp;&nbsp;
 											<span th:text="#{${'country.' + extraBet.thirdFinalWinner.getIsoCode()}}"></span>
