bugfix layout match result

--- a/src/main/resources/templates/matches/matchresult.html
+++ b/src/main/resources/templates/matches/matchresult.html
@@ -59,10 +59,10 @@
 							</div>
 						</div>						
 						<div id="penaltyBox" th:if="${!matchResultCommand.isGroupMatch()}">
-							<div class="row">
+							<div class="row no-left-right-margin">
 								<span class="bold" th:text="#{penalty.box.heading}"></span>
 							</div>
-							<div class="row center color-result penalty-height">
+							<div class="row center color-result penalty-height no-left-right-margin">
 								<div class="col-xs-6">
 									<input type="radio" th:field="*{penaltyWinnerOne}" value="true" />
 								</div>
