renamed extra_bets; update spring boot

--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -26,7 +26,7 @@
 				        	</a>
 				        	<ul class="dropdown-menu">
 								<li th:class="${pageState_bet_open}"><a href="#bet" th:href="@{/bet/open}" th:text="#{navigation.betting.open}"></a></li>
-								<li th:class="${pageState_extra_bets}"><a href="#bet" th:href="@{/extra_bets}" th:text="#{navigation.betting.extraBets}"></a></li>
+								<li th:class="${pageState_extrabets}"><a href="#bet" th:href="@{/extrabets}" th:text="#{navigation.betting.extraBets}"></a></li>
 							</ul>
 						</li>						
 						<li class="dropdown" th:classappend="${pageState_group}">
